force-app/main/default/objects/Account_Associations__c/Account_Associations__c.object-meta.xml
<CustomObject>
    <label>Account Associations</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Association Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Associations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>