force-app/main/default/objects/Account_Associations__c/fields/Association__c.field-meta.xml
<CustomField>
    <fullName>Association__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Association</label>
    <referenceTo>Association__c</referenceTo>
    <relationshipLabel>Account Associations</relationshipLabel>
    <relationshipName>Account_Associations</relationshipName>
    <type>Lookup</type>
</CustomField>