force-app/main/default/objects/Account_Associations__c/fields/Association_ID__c.field-meta.xml
<CustomField>
    <fullName>Association_ID__c</fullName>
    <description>This is Assocation ID for the account  which is related to the external systems.</description>
    <inlineHelpText>This is Assocation ID for the account  which is related to the external systems.</inlineHelpText>
    <label>Association ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>