force-app/main/default/objects/Account_Associations__c/fields/Association_Product__c.field-meta.xml
<CustomField>
    <fullName>Association_Product__c</fullName>
    <formula>Association__r.Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Product</label>
    <type>Text</type>
</CustomField>