force-app/main/default/objects/Account_Associations__c/fields/Association_Product_EE__c.field-meta.xml
<CustomField>
    <fullName>Association_Product_EE__c</fullName>
    <formula>&apos;&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Association Product EE</label>
    <type>Text</type>
</CustomField>