force-app/main/default/objects/Account_Associations__c/fields/Chamber__c.field-meta.xml
<CustomField>
    <fullName>Chamber__c</fullName>
    <label>Chamber</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CSAG</fullName>
            </value>
            <value>
                <fullName>CSBM</fullName>
            </value>
            <value>
                <fullName>CSCM</fullName>
            </value>
            <value>
                <fullName>CSENO</fullName>
            </value>
            <value>
                <fullName>CSFEI</fullName>
            </value>
            <value>
                <fullName>CSFM</fullName>
            </value>
            <value>
                <fullName>CSHPA</fullName>
            </value>
            <value>
                <fullName>CSMAIP</fullName>
            </value>
            <value>
                <fullName>CSMAM</fullName>
            </value>
            <value>
                <fullName>CSMAT</fullName>
            </value>
            <value>
                <fullName>CSMEAG</fullName>
            </value>
            <value>
                <fullName>CSMEM</fullName>
            </value>
            <value>
                <fullName>CSMEPS</fullName>
            </value>
            <value>
                <fullName>CSMF</fullName>
            </value>
            <value>
                <fullName>CSMGG</fullName>
            </value>
            <value>
                <fullName>CSMIAFRI</fullName>
            </value>
            <value>
                <fullName>CSMLIMP</fullName>
            </value>
            <value>
                <fullName>CSPEP</fullName>
            </value>
            <value>
                <fullName>CSQI</fullName>
            </value>
            <value>
                <fullName>CSTM</fullName>
            </value>
            <value>
                <fullName>CSVED</fullName>
            </value>
            <value>
                <fullName>CSVI</fullName>
            </value>
            <value>
                <fullName>SINDESAM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>