force-app/main/default/objects/Account_Associations__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <formula>Association__r.Series__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Series</label>
    <type>Text</type>
</CustomField>